Fix stretched theme images
Sometimes less is more.

--- a/source/_assets/sass/_themes.scss
+++ b/source/_assets/sass/_themes.scss
@@ -181,11 +181,6 @@ section.theme-2 {
 			padding: 0 $theme-gutter/2;
 		}
 
-		// TODO: Fix stretching
-		img {
-			width: 100%;
-		}
-
 	}
 
 	@media #{$mq-medium} {
@@ -219,12 +214,6 @@ section.theme-2 {
 
 section.theme-3 {
 	@include theme-background(#EEE0F1);
-
-	.image, img {
-		max-height: 30vh;
-		max-width: 100%;
-		width: auto;
-	}
 
 	.image-1 {
 		order: 1;
@@ -274,23 +263,12 @@ section.theme-3 {
 			order: 4;
 		}
 
-		// TODO: Fix stretching
-		img {
-			width: 100%;
-		}
-
 	}
 
 }
 
 section.theme-4 {
 	@include theme-background(#DFF5F3);
-
-	.image, img {
-		max-height: 30vh;
-		max-width: 100%;
-		width: auto;
-	}
 
 	.image-1 {
 		order: 1;
@@ -322,11 +300,6 @@ section.theme-4 {
 		.image {
 			flex-basis: 50%;
 			padding: 0 $theme-gutter/2;
-		}
-
-		// TODO: Fix stretching
-		img {
-			width: 100%;
 		}
 
 	}
