--- a/source/_assets/sass/_video.scss
+++ b/source/_assets/sass/_video.scss
@@ -6,6 +6,7 @@ section.video {
 		margin-left: auto;
 		margin-right: auto;
 		display: block;
+		width: 100%;
 	}
 	.video-js {
 		width: 100%;
